[tool.poetry]
name = "assignment-py"
version = "0.1.0"
description = ""
authors = ["shih_jun_teh <shih_jun_teh@dell.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flask-sqlalchemy = "^2.4.0"
marshmallow-sqlalchemy = "^0.19.0"
flask-migrate = "^2.5.2"
psycopg2 = "^2.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
